# data-slam-dunk-challenge1

./: README.md  pyproject.toml
data/sources/: json_data.json
